--- a/vignettes/vpc-obs-quant-blq-cens.Rmd
+++ b/vignettes/vpc-obs-quant-blq-cens.Rmd
@@ -50,7 +50,7 @@ plot_data <- data_sad %>%
 Now let's plot the data using `ODV` colored by `Dose (mg)` and faceted by `PART`. 
 
 ```{r plot-conc-time, fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
-plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)",  
+plot_dvtime(plot_data, dv_var = "ODV", col_var = "Dose (mg)",  
             ylab = "Concentration (ng/mL)", log_y = TRUE) +
   facet_wrap(~PART)
 ```
@@ -58,7 +58,7 @@ plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)",
 The concentration-time profiles increase with dose with some potential impact of censoring at the LLOQ in the late terminal phase. To further assess the potential impact of BLQ censoring, we will set the `loq_method = 2` in `plot_dvtime`, which imputes BLQ data to 1/2 x LLOQ. Imputing  concentrations below the lower limit of quantification as 1/2 x LLOQ normalizes the late terminal phase of the concentration-time profile. This suggests that the artifact in the late terminal phase is due to censoring of observations below the LLOQ, which impacts lower doses more than higher doses.
 
 ```{r plot-conc-time-blq, fig.height=4, fig.width=8, message=FALSE, warning=FALSE}
-plot_dvtime(plot_data, dv_var = c(DV = "ODV"), col_var = "Dose (mg)", loq_method = 2, 
+plot_dvtime(plot_data, dv_var =  "ODV", col_var = "Dose (mg)", loq_method = 2, 
             ylab = "Concentration (ng/mL)", log_y = TRUE) +
   facet_wrap(~PART)
 ```
